sumo/tests/duarouter/trips/errors/vehicle_empty_departlane/errors.duarouter
Error: Attribute 'departLane' in definition of a trip is empty.
Error: Invalid departLane definition for vehicle ''
Quitting (on error).
